--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
-  height: 1000vh;
-  background-color: plum;
+  height: 500vh;
+  background-color: rgb(55, 48, 48);
 }
 
 li {
@@ -9,17 +9,17 @@ li {
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
   font-size: 1rem;
 }
 
 a:hover {
-  color: lightblue;
+  color: rgb(109, 61, 164);
 }
 
 header {
   position: relative;
-  padding: 0 2rem;
+  padding: 0 1.5rem;
 }
 
 .navbar {
@@ -49,12 +49,148 @@ header {
   display: none;
 }
 
-@media(max-width: 992px){
-  .navbar .links{
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  right: 1rem;
+  top: 60px;
+  height: 0;
+  width: 170px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(15px);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown-menu.open {
+  height: 130px;
+}
+
+.dropdown-menu li {
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+#initial-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-self: center;
+  margin: 0 auto;
+  height: 90vh;
+  background-color: #131313;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.initial-section .initial-text {
+  padding: 15px;
+}
+
+.initial-section .initial-text h2 {
+  font-size: 4rem;
+  margin-top: 10px;
+  color: white;
+}
+
+.initial-section .initial-img {
+  text-align: center;
+}
+
+.initial-section .initial-img img {
+  height: 80%;
+  width: 80%;
+}
+
+/*#initial-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
+  background: #f5f5f5;
+}
+
+.initial-text {
+  max-width: 45%;
+}
+
+.initial-text h2 {
+  font-size: 2rem;
+  line-height: 1.3;
+}
+
+.initial-img {
+  max-width: 45%;
+}
+
+.initial-img img {
+  width: 100%;
+  object-fit: cover;
+}*/
+
+blockquote {
+  font-style: italic;
+  background-color: #f9f9f9;
+  margin: 10px;
+  padding: 20px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  content: open-quote;
+}
+
+blockquote:after {
+  content: close-quote;
+}
+
+blockquote footer {
+  text-align: right;
+  display: block;
+  margin-top: 10px;
+}
+
+blockquote cite {
+  font-style: normal;
+  font-weight: bold;
+}
+
+@media (max-width: 662px) {
+  .navbar .links {
     display: none;
   }
 
-  .navbar .toggle-btn{
+  .navbar .toggle-btn {
     display: block;
   }
+
+  .dropdown-menu {
+    display: block;
+  }
+}
+
+@media (max-width: 490px) {
+  .dropdown-menu {
+    left: 2rem;
+    width: unset;
+  }
+
+  #initial-section {
+    flex-direction: column;
+  }
+  .initial-section .initial-text {
+    margin-top: 20vh; 
+  }
+  .initial-section .initial-img .first- {
+    margin-top: 10vh; 
+    margin-left: 0; 
+  }
+
 }
