--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   height: 500vh;
-  background-color: rgb(55, 48, 48);
+  background-color: #131313;
 }
 
 li {
@@ -10,17 +10,20 @@ li {
 a {
   text-decoration: none;
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 a:hover {
   color: rgb(109, 61, 164);
+  text-decoration: underline;
 }
 
 header {
   position: relative;
   padding: 0 1.5rem;
 }
+
+/*navbar section*/
 
 .navbar {
   width: 100%;
@@ -30,11 +33,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #131313;
 }
 
 .navbar .title {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: bold;
+  color: white;
 }
 
 .navbar .links {
@@ -43,7 +48,7 @@ header {
 }
 
 .navbar .toggle-btn {
-  color: black;
+  color: white;
   font-size: 1.7rem;
   cursor: pointer;
   display: none;
@@ -74,20 +79,40 @@ header {
   justify-content: center;
 }
 
+@media (max-width: 662px) {
+  .navbar .links {
+    display: none;
+  }
 
-#initial-section {
+  .navbar .toggle-btn {
+    display: block;
+  }
+
+  .dropdown-menu {
+    display: block;
+  }
+}
+
+@media (max-width: 490px) {
+  .dropdown-menu {
+    left: 2rem;
+    width: unset;
+  }
+}
+
+.initial-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-self: center;
   margin: 0 auto;
-  height: 90vh;
+  height: 80vh;
   background-color: #131313;
   z-index: 1;
   width: 100%;
   max-width: 1300px;
   padding-right: 50px;
-  padding-left: 50px;
+  padding-left: 20px;
 }
 
 .initial-section .initial-text {
@@ -109,88 +134,125 @@ header {
   width: 80%;
 }
 
-/*#initial-section {
-  display: flex;
-  justify-content: space-between;
+@media screen and (max-width: 768px) {
+  .initial-section {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 90vh;
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .initial-section.initial-text h2 {
+    font-size: 2.2rem;
+    margin-top: 2rem;
+  }
+}
+
+
+
+@media screen and (max-width: 480px) {
+  .main__content h1 {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+
+  .main__content h2 {
+    font-size: 2rem;
+  }
+
+  .main__content p {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .main__btn {
+    padding: 12px 36px;
+    margin: 2.5rem 0;
+  }
+}
+
+.quote-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
-  padding: 50px;
-  background: #f5f5f5;
-}
-
-.initial-text {
-  max-width: 45%;
-}
-
-.initial-text h2 {
-  font-size: 2rem;
-  line-height: 1.3;
-}
-
-.initial-img {
-  max-width: 45%;
-}
-
-.initial-img img {
+  justify-self: center;
+  margin: 0 auto;
+  height: 55vh;
+  background-color: rgb(253, 79, 79);
+  z-index: 1;
   width: 100%;
-  object-fit: cover;
-}*/
+  max-width: 100%;
+}
 
-blockquote {
+.quote-section .quote-img {
+  text-align: center;
+}
+
+.quote-section .quote-img img {
+  height: 85%;
+  width: 85%;
+}
+
+.quote-section .quote blockquote {
   font-style: italic;
   background-color: #f9f9f9;
   margin: 10px;
   padding: 20px;
   quotes: "\201C""\201D""\2018""\2019";
+  height: auto;
+  font-size: 2.5rem;
 }
 
-blockquote:before {
+.quote-section .quote blockquote:before {
   content: open-quote;
 }
 
-blockquote:after {
+.quote-section .quote blockquote:after {
   content: close-quote;
 }
 
-blockquote footer {
+.quote-section .quote blockquote footer {
   text-align: right;
   display: block;
   margin-top: 10px;
 }
 
-blockquote cite {
+.quote-section .quote blockquote cite {
   font-style: normal;
   font-weight: bold;
 }
 
-@media (max-width: 662px) {
-  .navbar .links {
-    display: none;
-  }
-
-  .navbar .toggle-btn {
-    display: block;
-  }
-
-  .dropdown-menu {
-    display: block;
+@media screen and (max-width: 768px) {
+  .quote-section {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 80vh;
+    text-align: center;
+    margin-bottom: 4rem;
   }
 }
 
-@media (max-width: 490px) {
-  .dropdown-menu {
-    left: 2rem;
-    width: unset;
-  }
+/*main section*/
 
-  #initial-section {
-    flex-direction: column;
-  }
-  .initial-section .initial-text {
-    margin-top: 20vh; 
-  }
-  .initial-section .initial-img .first- {
-    margin-top: 10vh; 
-    margin-left: 0; 
-  }
-
+.main-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-self: center;
+  margin: 0 auto;
+  height: 85vh;
+  background-color: rgb(253, 79, 79);
+  z-index: 1;
+  width: 100%;
+  max-width: 100%;
 }
+
